--- a/app/Views/frontend/index.html
+++ b/app/Views/frontend/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/frontend/favicon.ico"><title>frontend</title><script defer="defer" src="/frontend/js/chunk-vendors.3001ed84.js"></script><script defer="defer" src="/frontend/js/app.c2f43387.js"></script><link href="/frontend/css/app.2cf79ad6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="../active/frontend/favicon.ico" />
+    <title>frontend</title>
+    <script
+      defer="defer"
+      src="../active/frontend/js/chunk-vendors.3001ed84.js"
+    ></script>
+    <script defer="defer" src="../active/frontend/js/app.0cf10988.js"></script>
+    <link href="../active/frontend/css/app.528e95a5.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but frontend doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+  </body>
+</html>
