--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,11 +39,11 @@ body {
   body {
     padding: 3%;
     display: flex;
-    height: 180vh;
+    height: 100vh;
     background-color: #f8fafc;
   }
 
-  
+
   .title{
     font-size: 1.5em;
     font-weight: bold;
@@ -73,6 +73,15 @@ body {
 }
 
 @media screen and (min-width : 1024px) {
+  .authtitle{
+    font-size: 1.6em;
+  }
+
+  .singup{
+    height: 4vh;
+    font-size: 1.2em;
+  }
+
 
   .title{
     font-size: 2.4em;
