--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,6 +63,9 @@ a:hover {
     font-size: 3em;
     font-weight: bold;
   }
+  .pc_none {
+    display: none;
+  }
   .mianpage_sidheader {
     font-size: 1.5em;
     font-weight: bold;
