--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,6 @@ a:hover {
 @media screen and (max-width : 800px) {
 
   body {
-    padding: 3%;
     display: flex;
     height: 170vh;
   }
@@ -25,7 +24,7 @@ a:hover {
     font-weight: bold;
   }
   .custon-with{
-    height: 40vh;
+    
   }
   .mianpage_header{
     font-size: 1.8em;
@@ -42,9 +41,19 @@ a:hover {
     font-size: 1em;
     font-weight: bold;
   }
+
+  .board_button{
+    font-size: 1em;
+  }
 }
 
 @media screen and (min-width : 1024px) {
+
+  .board_button{
+    font-size: 1.2em;
+  }
+
+
   .authtitle{
     font-size: 1.3em;
   }
