서버 신청페이지 완성 및 빌드후 업로드

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,6 +80,20 @@ a:hover {
     font-weight: bold;
     font-size: 2em;
   }
+
+  .server_title{
+    font-size: 4em;
+    font-weight: bold;
+  }
+
+  .server_sub_title{
+    font-size: 2em;
+  }
+
+  .server_sub_sub_title{
+    font-size: 1.8em;
+    font-weight: bold;
+  }
 }
 
 @layer base {
