404 페이지 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -76,6 +76,11 @@ a:hover {
   }
 }
 
+.notfound{
+  weight: auto;
+  height: 20vh;
+}
+
 @media screen and (min-width : 900px) {
 
   .board_button{
